2nd training/Community/Community/Community1/force-app/main/default/objects/FreightProductLineItem__c/FreightProductLineItem__c.object-meta.xml
<CustomObject>
    <description>Junction Object to add , Products to Freight Calculator</description>
    <label>FreightProductLineItem</label>
    <nameField>
        <displayFormat>FPI-{00000}</displayFormat>
        <label>FreightProductLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FreightProductLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>