2nd training/Community/Community/Community1/force-app/main/default/objects/FreightProductLineItem__c/fields/Freight_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Freight_Calculator__c</fullName>
    <label>Freight Calculator</label>
    <referenceTo>Freight_Calculator__c</referenceTo>
    <relationshipLabel>FreightProductLineItems</relationshipLabel>
    <relationshipName>FreightProductLineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>