2nd training/Community/Community/Community1/force-app/main/default/objects/FreightProductLineItem__c/fields/Optional__c.field-meta.xml
<CustomField>
    <fullName>Optional__c</fullName>
    <formula>IF(    ISBLANK( Product__c )     ,Optional_Physical__c,Product__r.Optional_Product__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>