2nd training/Community/Community/Community1/force-app/main/default/objects/FreightProductLineItem__c/fields/Optional_Physical__c.field-meta.xml
<CustomField>
    <fullName>Optional_Physical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>