2nd training/Community/Community/Community1/force-app/main/default/objects/FreightProductLineItem__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>List Price from Price List.</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>