2nd training/Community/Community/Community1/force-app/main/default/objects/FreightProductLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Lookup to be created for further details on the Product after the Freight calculator has been created.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>FreightProductLineItems</relationshipLabel>
    <relationshipName>FreightProductLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>