2nd training/Community/Community/Community1/force-app/main/default/objects/FreightProductLineItem__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>IF(ISBLANK( Product__c ),Product_Code_Physical__c,Product__r.ProductCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>