2nd training/Community/Community/Community1/force-app/main/default/objects/FreightProductLineItem__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>IF(ISBLANK( Product__c ),Product_Name_Physical__c ,Product__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>