2nd training/Community/Community/Community1/force-app/main/default/objects/FreightProductLineItem__c/fields/Product_Name_Physical__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Physical__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>