2nd training/Community/Community/Community1/force-app/main/default/objects/FreightProductLineItem__c/fields/Temporary_Crate__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Crate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Temporary Crate</label>
    <referenceTo>Temporary_Crate__c</referenceTo>
    <relationshipLabel>FreightProductLineItems</relationshipLabel>
    <relationshipName>FreightProductLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>